eks/eks-workshop-v2/manifests/load-test.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: nginx
  name: nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: nginx
    spec:
      topologySpreadConstraints:
      - maxSkew: 1
        # topology domain
        topologyKey: kubernetes.io/hostname
        whenUnsatisfiable: DoNotSchedule
        # selector is used for spreading calculation
        # empty selector matches all objects, null matches none
        labelSelector:
          matchLabels:
            app: nginx
      containers:
      - image: nginx
        name: nginx
        resources:
          limits:
            # so hungry :-(=) 
            cpu: 1
status: {}
